Completed styling Hero Section fixed all the alignment and flex realted to hero section

--- a/style.css
+++ b/style.css
@@ -1,3 +1,82 @@
 body{
+    min-width: 300px;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
+    flex-direction: column;
+    margin: 0px;
+}
+.header .logo{
+    font-size: 24px;
+}
+.img-section img{
+    width: 300px;
+    height: 300px;
+    border-color: #1F2937;
+    border-style: groove;
+}
+
+.hero,.footer{
+    background-color: #1F2937;
+    color: #F9faf8;
+
+}
+
+.hero{
+    display: flex;
+    flex-direction: column;
+}
+.header{
+    display: flex;
+    justify-content: space-between;
+    margin: 5px 50px;
+}
+.header .right-link{
+    display: flex;
+    justify-content: space-evenly;
+    padding: 10px;
+}
+
+a, .hero-sec-txt{
+    text-decoration: none;
+    color: #E5E7E6;
+    font-size: 18px;
+
+
+}
+
+.hero-body{
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+.head-img img{
+    width: 500px;
+    height: 250px;
+    margin: 20px;
+}
+
+.hero-body .left-link{
+    display: flex;
+    flex-direction: column;
+    justify-content: baseline;
+    align-items: center;
+    padding: 20px 40px;
+    gap: 10px;
+}
+div .hero-main-text{
+    font-size: 48px;
+    font-weight: 900;
+    margin: 0 5px;
+    
+
+}
+.btn{
+    background-color: #3882f6;
+    color:#E5E7E6;
+    padding: 10px 30px;
+    margin: 0 2px;
+    border-radius: 6px;
+    border: 0px;
+    font-size: 15px;
 }
